--- a/pacific.css
+++ b/pacific.css
@@ -49,7 +49,8 @@ nav {
   font-size: 120%;
   padding: 1.5em;
   margin-top: 0;
-  width: 160px;
+  padding: 0;
+  text-align: center;
 }
 nav ul {
   list-style-type: none;
