--- a/pacific.css
+++ b/pacific.css
@@ -29,10 +29,11 @@ header a:hover {
   color: #90c7e3;
 }
 h1 { 
-  font-size: 3em;
   letter-spacing: 0.25em;
   margin-bottom: 0;
   margin-top: 0;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
   font-family: Georgia, "Times New Roman", serif;
 }
 nav { 
