--- a/pacific.css
+++ b/pacific.css
@@ -106,3 +106,11 @@ footer {
   background-repeat: no-repeat;
   background-size: 100% 100%; 
 }
+
+@media (min-width: 600px){
+  nav ul  { 
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-around;
+  }
+}
