--- a/pacific.css
+++ b/pacific.css
@@ -149,4 +149,13 @@ footer {
     text-align: left;
     padding-left: 1em;
   }
+  #wrapper { 
+    margin: auto; 
+    width: 80%;
+    border: 1px solid #000033; 
+    box-shadow: 1px 1px #000033; 
+    display: grid;
+    grid-template-columns: 180px auto;
+    grid-template-rows: auto;
+  }
 }
