--- a/pacific.css
+++ b/pacific.css
@@ -158,4 +158,19 @@ footer {
     grid-template-columns: 180px auto;
     grid-template-rows: auto;
   }
+  header { 
+    grid-row: 1 / 2; grid-column: 1 / 3; 
+  }
+  nav { 
+    grid-row: 2 / 5; grid-column: 1 / 2; 
+  }
+  div { 
+    grid-row: 2 / 3; grid-column: 2 / 3; 
+  }
+  main { 
+    grid-row: 3 / 4; grid-column: 2 / 3;
+  }
+  footer { 
+    grid-row: 4 / 5; grid-column: 2 / 3;
+  }
 }
